force-app/main/default/objects/Event__c/validationRules/End_Date_Time_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Time_Rule</fullName>
    <active>true</active>
    <description>- End Date/Time must be at-least 1 day ahead of Start Date/Time (If there is a value in End Date/Time field) ,</description>
    <errorConditionFormula>IF( NOT( ISBLANK( End_date__c ) ) , Start_Date__c 
+1 &gt;  End_date__c , false)</errorConditionFormula>
    <errorDisplayField>End_date__c</errorDisplayField>
    <errorMessage>End Date/Time must be at-least 1 day ahead of Start Date/Time</errorMessage>
</ValidationRule>