force-app/main/default/objects/Event__c/validationRules/Recurring_and_frequency_validation_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Recurring_and_frequency_validation_rule</fullName>
    <active>true</active>
    <errorConditionFormula>( Recurring__c =true  &amp;&amp;  TEXT(Frequency__c ) = null)  || ( Recurring__c =false  &amp;&amp;  TEXT(Frequency__c) !=null)</errorConditionFormula>
    <errorDisplayField>Frequency__c</errorDisplayField>
    <errorMessage>you choose Recurring? checkbox as checked so you must need to fill Frequency field &amp; If checkbox is unchecked then you cannot select Frequency field.</errorMessage>
</ValidationRule>