force-app/main/default/objects/Event__c/validationRules/Value_In_Pearson_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Value_In_Pearson_Rule</fullName>
    <active>true</active>
    <description>If Event Type field value is In-Person then user must need to select Location on Event Record.</description>
    <errorConditionFormula>TEXT(Event_Type__c) = &quot;In-Person&quot;

&amp;&amp; Location__c = NULL</errorConditionFormula>
    <errorDisplayField>Location__c</errorDisplayField>
    <errorMessage>Event Type field value is In-Person then you must need to select Location on Event Record.</errorMessage>
</ValidationRule>