force-app/main/default/objects/Event__c/validationRules/Virtual_and_location_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Virtual_and_location_rule</fullName>
    <active>true</active>
    <description>If Virtual is Selected as Value for Event Type field, then Prevent User to Select Location on Event Record.</description>
    <errorConditionFormula>TEXT(Event_Type__c) = &quot;Virtual&quot; 

 &amp;&amp; Location__c != NULL</errorConditionFormula>
    <errorDisplayField>Location__c</errorDisplayField>
    <errorMessage>You can not select Location Field because you choose Virtual in event type.</errorMessage>
</ValidationRule>